@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-10-14T08:19:51Z",
-  "count_outdated" : 535,
-  "uniques_outdated" : 254,
-  "count" : 568,
+  "timestamp" : "2023-10-14T16:20:40Z",
+  "count_outdated" : 537,
+  "uniques_outdated" : 255,
+  "count" : 569,
   "uniques" : 270,
   "clones" : [
-    {
-      "timestamp": "2023-09-30T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-10-01T00:00:00Z",
       "count": 5,
@@ -115,9 +106,9 @@
     },
     {
       "timestamp": "2023-10-14T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count": 3,
+      "count_minmax": [ 2, 3 ],
+      "count_decinc": [ 0, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
