@@ -3,11 +3,6 @@
   "uniques": 4,
   "clones": [
     {
-      "timestamp": "2023-09-30T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2023-10-01T00:00:00Z",
       "count": 5,
       "uniques": 2
@@ -64,7 +59,7 @@
     },
     {
       "timestamp": "2023-10-14T00:00:00Z",
-      "count": 2,
+      "count": 3,
       "uniques": 1
     }
   ]
