@@ -1,3 +1,12 @@
+2023-10-14T16:20:40Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6518727373 # 864
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-14
+* notice: last 14d: unq all: 4 32
+* notice: prev accum: outdated-unq outdated-all / unq all: 254 535 / 270 568
+* notice: next accum: outdated-unq outdated-all / unq all: 255 537 / 270 569
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +3 -0 -0 / 1 3
+* notice: removed / changed dates: [2023-09-30] / [2023-10-14]
+
 2023-10-14T08:19:51Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6516545766 # 863
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-14
